# runinfra-sdk

./: .gitignore  AGENT-NOTES.md  CONTRIBUTING.md  LIVE-CANARIES.md  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
AGENTS-GOALs/: 2026-05-23-agent-4-sdk-production-stability-goal.md
python/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
python/runinfra/: __init__.py
python/tests/: test_runinfra_sdk.py
scripts/: canary-report-base-url.mjs  clean-install-policy.mjs  live-canary-matrix.mjs  live-canary-model-discovery.mjs  live-canary-readiness-policy.mjs  live-canary-source-files.mjs  live-canary-surface-coverage.mjs  registry-version-preflight.mjs  run-sdk-live-canaries.mjs  sdk-live-canary-python.py  sdk-live-canary-typescript.mjs  secret-scan-policy.mjs  verify-clean-installs.mjs  verify-github-security-status.mjs  verify-npm-package.mjs  verify-promoted-artifacts.mjs  verify-promotion-reports.mjs  verify-publish-dispatch.mjs  verify-python-package.py  verify-version-sync.mjs  verify-workflow-policy.mjs  workflow-policy.mjs
typescript/: CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
typescript/src/: index.test.ts  index.ts
